<resources>
    <string name="app_name">TurtleCoin Wallet</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_wallet">Wallet</string>

    <string name="title_activity_landing">LandingActivity</string>
    <string name="welcome_message">Welcome to TurtleCoin Wallet</string>
    <string name="sign_in">Sign In</string>
    <string name="create_profile">Create a profile</string>

    <string name="receive">Receive</string>
    <string name="send">Send</string>
    <string name="receive_turtlecoin_address">Receive TurtleCoin Address</string>
    <string name="receive_coin_description">Tap on address to copy it to clipboard or click on icon to share QR code.</string>
    <string name="btc_ticker">BTC</string>
    <string name="trtl_ticker">TRTL</string>
    <string name="recipients_address">Recipient\'s Address</string>
    <string name="address">Address</string>
    <string name="height">Height</string>
    <string name="hash_rate">Hash Rate</string>
    <string name="market_data">Market Data</string>
    <string name="total_balance">Total Balance</string>
    <string name="network_info">Network Info</string>
    <string name="settings">Settings</string>
    <string name="dashboard">Dashboard</string>
    <string name="log_out">Log Out</string>
    <string name="difficulty">Difficulty</string>
    <string name="supply">Supply</string>
    <string name="loading">loading...</string>
    <string name="transactions">Transactions</string>
    <string name="clipboard_copied">Address copied to clipboard</string>
    <string name="about">About</string>
    <string name="licenses">Licenses</string>
    <string name="apache_license_v2_0">http://www.apache.org/licenses/LICENSE-2.0.html</string>
    <string name="zxing_github_link">https://github.com/zxing/zxing</string>
    <string name="zxing_license_title">ZXing (Zebra Crossing) barcode scanning library for Java, Android</string>
    <string name="qr_scan_failed">Scan failed, please try again</string>
    <string name="qr_scan_wrong">Scan TRTL Addresses only</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="address_book">Address Book</string>
    <string name="add_new_contact">+ ADD NEW CONTACT</string>
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="no_contacts_text">No Contacts Yet</string>
    <string name="new_contact">New Contact</string>
    <string name="edit_contact">Edit Contact</string>

    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="receive_address">Receive Address</string>
    <string name="delete_contact_alert_text">Are you sure you want to delete the contact: %s</string>
    <string name="edit_contact_wrong_address">Invalid address</string>
    <string name="edit_contact_no_alias">Missing name</string>

    <!-- Settings -->
    <string name="darkmode_setting">darkmode_enabled</string>
    <string name="title_darkmode_preference">Dark Mode</string>
    <string name="setting_appearance_header">Appearance</string>
</resources>
