<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/dashboard"
            android:icon="@drawable/ic_menu_dashboard"
            android:title="@string/dashboard" />

        <item
            android:id="@+id/address_book"
            android:icon="@drawable/ic_address_book"
            android:title="@string/address_book" />

        <item
            android:id="@+id/network_info"
            android:icon="@drawable/ic_network_info"
            android:title="@string/network_info" />

        <item
            android:id="@+id/drawer_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_info_outline"
            android:title="@string/about" />

        <item
            android:id="@+id/log_out"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/log_out" />
    </group>


</menu>