<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/page_margin"
    tools:context="com.turtlecoin.turtlewallet.EditContactActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="fill"
        android:text="@string/name"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="fill"
        android:text="@string/address"
        android:layout_marginTop="@dimen/page_margin"
        android:textSize="13sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/address_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/address" />

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@null"
            android:onClick="readQRCodeOnClick"
            android:src="@drawable/ic_read_qr"
            android:tint="@color/qrIconColor" />
    </LinearLayout>

    <Button
        android:id="@+id/done_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/page_margin"
        android:background="@drawable/arc_corner"
        android:textStyle="bold"
        android:text="@string/add"
        android:textColor="@color/white"
        android:onClick="addOnClick"/>

</LinearLayout>
